tests/fixtures/invalid/divmod_float_bytes.py
# Cannot call divmod() with Float, Bytes
x = divmod(1.0, b"hello")
